2003-07-06  Akim Demaille  <akim@epita.fr>

	* lib/am/subdirs.am (RECURSIVE_TARGETS): Move install-recursive,
	install-exec-recursive, install-data-recursive and
	uninstall-recursive addition to...
	* lib/am/texinfos.am: here.
	* lib/am/texinfos.am, lib/am/subdirs.am: Remove the .PHONY
	declaration of RECURSIVE_TARGETS.

2003-07-06  Akim Demaille  <akim@epita.fr>

	* lib/Automake/Variable.pm, lib/Automake/VarDef.pm (VAR_SORTED):
	New variable type.
	Handle it.
	* automake.in (&handle_subdirs): Prototype.
	Adjust callers.
	Make RECURSIVE_TARGETS a VAR_SORTED.

2003-07-06  Akim Demaille  <akim@epita.fr>

	* automake.in (&define_files_variable): New.
	(&handle_texinfo_helper): Move the handling of user variables from
	here, to...
	(&handle_texinfo): here.
	This is to balance the size of these functions, and to match the
	convention of other _helper functions.
	(&handle_texinfo_helper): Use &define_files_variable.
	Move some code to use less variables.
	Rename $info_cursor as $texi.
	(&handle_texinfo): Do not call handle_texinfo_helper if there are
	no TEXINFOS.
	* lib/am/texinfos.am: Sort the occurrences of dvi, info, pdf, ps
	and html.
	Remove *-recursive targets from .PHONY, they are part of
	$(RECURSIVE_TARGETS) anyway.
	(install-info, mostlyclean-aminfo): Are .PHONY.

2003-07-05  Akim Demaille  <akim@epita.fr>

	* lib/am/distdir.am: Use ';' as a terminator, not a separator, for
	sed complex commands, as required by NetBSD sed.
	Reported by Patrick Welche.

2003-07-05  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/config.guess, lib/config.sub: New upstream version.

2003-07-04  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (Optional, Dist): AC_CONFIG_AUX_DIR files
	are automatically distributed.

	* lib/depcomp (icc): Update to grok ICC 7.1's output.
	* m4/depend.m4 (_AM_DEPENDENCIES): Check dependency generation
	in a subdirectory, and with many dependencies.  This
	catches more failures of depcomp.
	Reports from Ralf Wildenhues and Akim Demaille.
