@@ -1,3 +1,9 @@
+2003-07-07  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* automake.in (generate_makefile): Move near the end of the
+	file, after the definition of all called functions, so that
+	prototypes can be enforced.
+
 2003-07-06  Akim Demaille  <akim@epita.fr>
 
 	* lib/am/subdirs.am (RECURSIVE_TARGETS): Move install-recursive,
